# rra_playground

./: .gitattributes  .gitignore  3DMarkDXRFeatureTest-20241023-121120.rra  3DMarkPortRoyal-20241023-121950.rra  3DMarkSolarBay-20241020-003039.rra  CMakeLists.txt  Cyberpunk2077-20241027-163207.rra  b1-Win64-Shipping-20250128-153608.rra  main.cpp  readme.md
shaders/: aoray.hlsl  includes.hlsli  primaryray.hlsl
